force-app/main/default/objects/MPT_JOIN__c/MPT_JOIN__c.object-meta.xml
<CustomObject>
    <label>MPT_JOIN</label>
    <nameField>
        <label>MPT_JOIN  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MPT_JOINS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>