force-app/main/default/objects/MPT_JOIN__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MPT_JOINS</relationshipLabel>
    <relationshipName>MPT_JOINS</relationshipName>
    <type>Lookup</type>
</CustomField>