force-app/main/default/objects/MPT_JOIN__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>IF(Account__r.IsPersonAccount, Account__r.FirstName +&apos; &apos;+ Account__r.LastName, Account__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>