force-app/main/default/objects/MPT_JOIN__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Component_MPTJoin Lookup Relationship</description>
    <label>Component</label>
    <referenceTo>Component__c</referenceTo>
    <relationshipLabel>MPT_JOINS</relationshipLabel>
    <relationshipName>MPT_JOINS</relationshipName>
    <type>Lookup</type>
</CustomField>