force-app/main/default/objects/MPT_JOIN__c/fields/Currency_merchant__c.field-meta.xml
<CustomField>
    <fullName>Currency_merchant__c</fullName>
    <label>Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>