force-app/main/default/objects/MPT_JOIN__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>MPT_JOINS</relationshipLabel>
    <relationshipName>MPT_JOINS</relationshipName>
    <type>Lookup</type>
</CustomField>