force-app/main/default/objects/MPT_JOIN__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount%</label>
    <summarizedField>Merchant_Terms__c.Amount__c</summarizedField>
    <summaryForeignKey>Merchant_Terms__c.MPT_Join__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>