force-app/main/default/objects/MPT_JOIN__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Payment Due</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Date of purchase</fullName>
            </value>
            <value>
                <fullName>Date of departure</fullName>
            </value>
            <value>
                <fullName>Days prior to departure</fullName>
            </value>
            <value>
                <fullName>Days after purchase</fullName>
            </value>
            <value>
                <fullName>Days after departure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>