force-app/main/default/objects/MPT_JOIN__c/validationRules/Prevent_User_to_Edit_If_Deal_Published.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_User_to_Edit_If_Deal_Published</fullName>
    <active>true</active>
    <description>User cannot edit record if deal status is Published.</description>
    <errorConditionFormula>ISPICKVAL(Component__r.LinkedDeal_D_O_S__r.Deal_Status__c, &apos;Published&apos;)</errorConditionFormula>
    <errorMessage>Cannot create and edit merchant payment terms on Published deal</errorMessage>
</ValidationRule>