force-app/main/default/objects/MPT_JOIN__c/validationRules/Total_Amount_cant_be_greater_than_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Amount_cant_be_greater_than_100</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Amount__c &gt;1</errorConditionFormula>
    <errorMessage>Edit the existing merchant term or delete the existing merchant term to create a new one</errorMessage>
</ValidationRule>